src/snapshots/jsonptr__assign__json__tests__test-14.snap
---
source: src/assign.rs
description: asserting that the JSON data is as expected after assignment
info:
  data:
    foo: bar
  ptr: /foo/bar
  assign: baz
---
{"foo":{"bar":"baz"}}
