src/snapshots/jsonptr__assign__json__tests__test-16.snap
---
source: src/assign.rs
description: asserting that the replaced JSON data returned from the assignment is as expected
info:
  data:
    foo:
      - bar: baz
      - bar: qux
      - bar: quux
  ptr: /foo/0/bar
  assign: grault
---
Ok(
    Some(
        String("baz"),
    ),
)
