src/snapshots/jsonptr__assign__json__tests__test-21.snap
---
source: src/assign.rs
description: asserting that the JSON data is as expected after assignment
info:
  data: ~
  ptr: /-
  assign: 34
---
[34]
